feat: engine classes and BoardGame refactor